name:                pg-table-search
version:             0.1.0.0
synopsis:            Postgres table search using n-gram matching
license:             BSD3
author:              Stephen Dekker
maintainer:          steve.dekk@gmail.com
copyright:           Copyright (c) 2016, Stephen Dekker
build-type:          Simple
cabal-version:       >=1.10

executable pg-table-search
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10.6.0 && < 0.11,
                       containers >= 0.5.6.2 && < 0.6,
                       multiset >= 0.3.0 && < 0.4,
                       optparse-applicative >= 0.11.0.2 && < 0.12,
                       postgresql-simple >= 0.4.10.0 && < 0.5,
                       text >= 1.2.1.3 && < 1.3

